# cmake-template

./: CMakeLists.txt  LICENSE  README.md
CMakeModules/: CPackConfig.cmake  InstallDirs.cmake  Version.cmake  version.h.mk
docs/: CMakeLists.txt  doxygen.mk
include/: .gitignore
src/: CMakeLists.txt  main.cpp
